# cart-service/docs/swagger.yaml
@@ -2,15 +2,18 @@ definitions:
   errors.HTTPErrorDTO:
     properties:
       code:
+        description: Error code
         example: 400
         type: integer
       details:
+        description: Detailed Error Messages
         example:
         - Invalid email.
         items:
           type: string
         type: array
       message:
+        description: Brief Error Message
         example: Status bad request.
         type: string
     type: object
@@ -49,6 +52,13 @@ definitions:
         items:
           $ref: '#/definitions/models.CartItem'
         type: array
+    type: object
+  responses.MessageResponse:
+    properties:
+      message:
+        description: Message being sent through the DTO
+        example: Sample Message
+        type: string
     type: object
 info:
   contact: {}
@@ -93,9 +103,9 @@ paths:
       - application/json
       responses:
         "201":
-          description: Created
+          description: Message denoting whether successfully created
           schema:
-            type: object
+            $ref: '#/definitions/responses.MessageResponse'
         "400":
           description: Bad Request
           schema:
@@ -124,9 +134,9 @@ paths:
       - application/json
       responses:
         "204":
-          description: No Content
+          description: Message denoting whether successfully updated
           schema:
-            type: object
+            $ref: '#/definitions/responses.MessageResponse'
         "400":
           description: Bad Request
           schema:
@@ -194,4 +204,29 @@ paths:
       summary: Empty Cart.
       tags:
       - Cart Overall
+  /health:
+    get:
+      consumes:
+      - application/json
+      description: Health Check Endpoint
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Health Check Message.
+          schema:
+            $ref: '#/definitions/responses.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.HTTPErrorDTO'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.HTTPErrorDTO'
+        "500":
+          description: Internal Server Error
+      summary: Health Check Endpoint
+      tags:
+      - Health Check
 swagger: "2.0"
