# checkout-service/controllers/checkout.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/swiggy-ipp/checkout-service/dto/responses"
 )
 
 // @Summary      Get an overview of the order
@@ -9,13 +10,13 @@ import (
 // @Tags         Checkout API
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  interface{}  "Order Overview Data"
+// @Success      200  {object}  responses.MessageResponse  "Order Overview Data"
 // @Failure      400  {object}  errors.HTTPErrorDTO
 // @Failure      404  {object}  errors.HTTPErrorDTO
 // @Failure      500  {object}  nil
 // @Router       /confirm [post]
 func GetOrderOverview(c *gin.Context) {
-	c.JSON(201, gin.H{"message": "Here's your order."})
+	c.JSON(200, responses.MessageResponse{Message: "Here's your order."})
 }
 
 // @Summary      Order Successful Webhook
@@ -23,11 +24,25 @@ func GetOrderOverview(c *gin.Context) {
 // @Tags         Checkout API
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  interface{}  "Cart Cleared message DTO."
+// @Success      200  {object}  responses.MessageResponse  "Cart Cleared message DTO."
 // @Failure      400  {object}  errors.HTTPErrorDTO
 // @Failure      404  {object}  errors.HTTPErrorDTO
 // @Failure      500  {object}  nil
 // @Router       /confirm/success [put]
 func OrderCompleteWebhook(c *gin.Context) {
-	c.JSON(200, gin.H{"message": "Order Complete."})
+	c.JSON(200, responses.MessageResponse{Message: "Order Complete."})
+}
+
+// @Summary      Health Check Endpoint
+// @Description  Health Check Endpoint
+// @Tags         Health Check
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  responses.MessageResponse  "Health Check Message."
+// @Failure      400  {object}  errors.HTTPErrorDTO
+// @Failure      404  {object}  errors.HTTPErrorDTO
+// @Failure      500  {object}  nil
+// @Router       /health [get]
+func HealthCheck(c *gin.Context) {
+	c.JSON(200, responses.MessageResponse{Message: "up"})
 }
